@@ -7,5 +7,6 @@ lib/Class/Data/Inheritable/Translucent.pm
 t/00-load.t
 t/01-basic_tests.t
 t/02-nonhash_objects.t
+t/critic.t
 t/pod-coverage.t
 t/pod.t
